--- a/public/css/login.css
+++ b/public/css/login.css
@@ -30,7 +30,7 @@
 
   .fadeIn.first
   {
-padding:20px 0px 20px 0px;
+    padding:30px 0px 30px 0px;
   }
 
   p.hidden
@@ -99,8 +99,6 @@ padding:20px 0px 20px 0px;
     display: inline-block;
     text-transform: uppercase;
     font-size: 13px;
-    -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-    box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
     -webkit-border-radius: 5px 5px 5px 5px;
     border-radius: 5px 5px 5px 5px;
     margin: 5px 20px 40px 20px;
@@ -254,5 +252,6 @@ padding:20px 0px 20px 0px;
   } 
   
   #icon {
-    width:15%;
+    width:20%;
+    opacity: 0.4;
   }
