--- a/public/css/login.css
+++ b/public/css/login.css
@@ -255,3 +255,41 @@
     width:20%;
     opacity: 0.4;
   }
+
+  .navbar
+  {
+    box-shadow: 0px 1px 7px 0px rgba(0,0,0,0.1);
+    margin-bottom: 20px;
+  }
+
+  .logout {
+    position: relative;
+    display: block;
+    margin-top: 12px;
+    
+  }
+  .logout-button {
+    display: none;
+    position: absolute;
+    background-color: #f75151;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 15px;
+    z-index: 1;
+  }
+
+  .logout-button a {
+    color:#fff;
+    margin: 8px;
+  }
+
+  .logout-button a:hover {
+    color:#fff;
+    text-decoration: none;
+  font-weight: bold;
+    margin: 8px;
+  }
+  
+  .logout:hover .logout-button {
+    display: block;
+  }
