--- a/public/css/login.css
+++ b/public/css/login.css
@@ -121,7 +121,7 @@
     transform: scale(0.95);
   }
   
-  input[type=text], input[type=password], select {
+  input[type=text], input[type=password], select, input[type=number]  {
     background-color: #f6f6f6;
     border: none;
     color: #0d0d0d;
